fix: post-thumbnain mt spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9292,6 +9292,7 @@ button.testimonial-arrow-btn:hover i {
 }
 .single-post-item .post-thumbnail img,
 .single-post-item .post-video img {
+  width: auto;
   border-radius: 20px;
   transform: scale(1);
   transition: all 0.5s ease-out;
